# actix-web-starter-template

./: .env  Cargo.toml  README.md
migrations/2020-02-08-233655_create_triggers/: up.sql
migrations/2020-02-09-233655_create_users/: up.sql
src/: main.rs
src/app/: app_state.rs  mod.rs
src/common/: mod.rs
src/configuration/: mod.rs
src/error/: mod.rs
src/model/: user.rs
src/repository/: mod.rs  schema.rs  user.rs
src/service/: authentication.rs  mod.rs
src/service/user/: authentication.rs  middleware.rs  mod.rs  request.rs  response.rs
