[package]
name = "actix-template"
version = "0.1.0"
authors = ["kacper-marzecki <60017757+kacper-marzecki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    # Rust actors framework.
actix = "0.9.0"
    # Core actix web framework
actix-web = "2.0.0"
    # Cors Middleware for actix web
actix-cors = "0.2.0"
    # Asynchronous functions from Request to a Response.
actix-service = "1.0.5"
    # Basic http primitives for actix-net framework.
actix-http = "1.0.1"
    # identity service
actix-identity = "0.2.1"
    # Date time library 
chrono = "0.4.10"
    # ORM
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"] }
    # Dotenv files 
dotenv = "0.15.0"
    # Implements a logger that can be configured via environment variables.
env_logger = "0.7.1"
    # experimantal common handling lib
failure = "0.1.6"
    # well, futures
futures = "0.3.1"
    # basic http types 
http = "0.2.0"
    # jwt 
jsonwebtoken = "7.0.1"
    # lazily evaluated statics 
lazy_static = "1.4.0"
    # collection of tools for user authentication
libreauth = "0.12.0"
    #  lightweight logging facade
log = "0.4.8"
    #  getting the current number of cpus on the machine
num_cpus = "1.12.0"
    # regEx
regex = "1.3.4"
    # serialization and deserialization
serde = "1.0.104"
    # json
serde_json = "1.0.46"
    # serde macros
serde_derive = "1.0.104"
    # generating slugs from unicode strings
slug = "0.1.4"
    # uuid type and generation
uuid = { version = "0.8.1", features = ["serde", "v4"] }
    # validation functions 
validator = "0.10.0"
    # validation macros 
validator_derive = "0.10.0"
    # env configuration into structs 
envconfig = "0.6.0"
    # env configuration into structs macros
envconfig_derive = "0.6.0"
argonautica = "0.2.0"